--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJ9B6zo3VWRFhnGkJjs9i7ZZg7i0ByP9I&callback=inicializarMapa"></script>
     <script src="./script.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJ9B6zo3VWRFhnGkJjs9i7ZZg7i0ByP9I&callback=inicializarMapa"></script>
     <title>Mi Ubicación</title>
 </head>
 <body>
@@ -29,5 +29,8 @@
         <span>Mapa</span>
         <div id="mapa" style="height: 70vh; width: 95%;"></div>
     </section>
+
+    <script src="./script.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJ9B6zo3VWRFhnGkJjs9i7ZZg7i0ByP9I&callback=inicializarMapa"></script>
 </body>
 </html>
